--- a/back/package.json
+++ b/back/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.13",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "ts-node-dev ./index.ts"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
   }
 }
